--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,12 +27,12 @@
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/bcrypt": "^6.0.0",
-    "@types/bcryptjs": "^3.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.18.4",
+    "axios": "^1.12.2",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
