--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,11 +11,13 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@repo/core": "workspace:*",
     "@repo/db": "workspace:*",
     "@tailwindcss/postcss": "^4.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.544.0",
     "next": "^15.5.0",
     "postcss": "^8.5.6",
