--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,11 +1,25 @@
 {
-  "extends": "@repo/typescript-config/node.json", 
+  "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
-    "outDir": "dist",
+    "module": "nodenext",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2023",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "noFallthroughCasesInSwitch": false,
     "paths": {
       "@repo/*": ["../../packages/*"]
     }
-  },  
-  "include": ["src", "../../packages/core/types/user.types.ts"],
-  "exclude": ["node_modules"]
+  }
 }
