--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,8 +2,9 @@
   "name": "@repo/core",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
